--- a/sharding5_jdbc01/src/main/resources/application.properties
+++ b/sharding5_jdbc01/src/main/resources/application.properties
@@ -27,12 +27,12 @@ spring.shardingsphere.datasource.slave2.jdbc-url=jdbc:mysql://192.168.200.174:33
 spring.shardingsphere.datasource.slave2.username=root
 spring.shardingsphere.datasource.slave2.password=123456
 
-# \u8BFB\u5199\u5206\u79BB\u7C7B\u578B\uFF0C\u5982: Static\uFF0CDynamic
-spring.shardingsphere.rules.readwrite-splitting.data-sources.myds.type=Static
-# \u5199\u6570\u636E\u6E90\u540D\u79F0
-spring.shardingsphere.rules.readwrite-splitting.data-sources.myds.props.write-data-source-name=master
-# \u8BFB\u6570\u636E\u6E90\u540D\u79F0\uFF0C\u591A\u4E2A\u4ECE\u6570\u636E\u6E90\u7528\u9017\u53F7\u5206\u9694
-spring.shardingsphere.rules.readwrite-splitting.data-sources.myds.props.read-data-source-names=slave1,slave2
+## \u8BFB\u5199\u5206\u79BB\u7C7B\u578B\uFF0C\u5982: Static\uFF0CDynamic
+#spring.shardingsphere.rules.readwrite-splitting.data-sources.myds.type=Static
+## \u5199\u6570\u636E\u6E90\u540D\u79F0
+#spring.shardingsphere.rules.readwrite-splitting.data-sources.myds.props.write-data-source-name=master
+## \u8BFB\u6570\u636E\u6E90\u540D\u79F0\uFF0C\u591A\u4E2A\u4ECE\u6570\u636E\u6E90\u7528\u9017\u53F7\u5206\u9694
+#spring.shardingsphere.rules.readwrite-splitting.data-sources.myds.props.read-data-source-names=slave1,slave2
 
 ## \u8D1F\u8F7D\u5747\u8861\u7B97\u6CD5\u540D\u79F0
 #spring.shardingsphere.rules.readwrite-splitting.data-sources.myds.load-balancer-name=alg_weight
