--- a/sharding5_jdbc01/src/main/resources/application.yml
+++ b/sharding5_jdbc01/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 spring:
   shardingsphere:
     datasource:
@@ -29,3 +30,6 @@ spring:
               - slave1
               - slave2
       sql-show: true
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
