--- a/sharding5_jdbc01/src/main/resources/application.yaml
+++ b/sharding5_jdbc01/src/main/resources/application.yaml
@@ -22,12 +22,10 @@ spring:
         password: 123456
     rules:
       dataSources:
-        readwrite_ds:
-          staticStrategy:
-            writeDataSourceName: master
-            readDataSourceNames:
-              - slave1
-              - slave2
+        <data-source-name> (+):  # 读写分离逻辑数据源名称
+          static-strategy: # 读写分离类型
+            write-data-source-name: master # 写库数据源名称
+            read-data-source-names: slave1,slave2
     props:
       sql-show: true
 mybatis-plus:
