--- a/sharding5_jdbc01/src/main/resources/application.yaml
+++ b/sharding5_jdbc01/src/main/resources/application.yaml
@@ -27,10 +27,10 @@ spring:
             static-strategy: # 读写分离类型
               write-data-source-name: master # 写库数据源名称
               read-data-source-names: slave1,slave2
-            loadBalancerName: random01
+            loadBalancerName: random
           loadBalancers:
-            random01:
-              type: RANDOM
+            random:
+              type: ROUND_ROBIN
               props:
                 default: 0
                 sql-show: true
