--- a/sharding5_jdbc01/src/main/resources/application.yaml
+++ b/sharding5_jdbc01/src/main/resources/application.yaml
@@ -23,7 +23,7 @@ spring:
     rules:
       readwrite-splitting:
         dataSources:
-          readwrite_ds: master,slave1,slave2 # 读写分离逻辑数据源名称
+          readwrite_ds:  # 读写分离逻辑数据源名称
             static-strategy: # 读写分离类型
               write-data-source-name: master # 写库数据源名称
               read-data-source-names: slave1,slave2
