--- a/sharding5_jdbc01/src/main/resources/application-读写分离.yaml
+++ b/sharding5_jdbc01/src/main/resources/application-读写分离.yaml
@@ -27,10 +27,10 @@ spring:
             static-strategy: # 读写分离类型
               write-data-source-name: master # 写库数据源名称
               read-data-source-names: slave1,slave2
-            loadBalancerName: random
-          loadBalancers:
-            random:
-              type: RANDOM
+#            loadBalancerName: random
+#          loadBalancers:
+#            random:
+#              type: RANDOM
     props:
       default: 0
       sql-show: true
