--- a/sharding5_jdbc01/src/main/resources/application.properties
+++ b/sharding5_jdbc01/src/main/resources/application.properties
@@ -28,7 +28,8 @@ spring.shardingsphere.rules.sharding.tables.t_user.actual-data-nodes=server-user
 #spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=server-order0.t_order0,server-order0.t_order1,server-order1.t_order0,server-order1.t_order1
 #spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=server-order0.t_order0
 #spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=server-order0.t_order1
-spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=server-order1.t_order0
+#spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=server-order1.t_order0
+spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=server-order1.t_order1
 # \u6253\u5370sql
 spring.shardingsphere.props.sql-show=true
 
