--- a/sharding5_jdbc01/src/main/resources/application.properties
+++ b/sharding5_jdbc01/src/main/resources/application.properties
@@ -1,9 +1,6 @@
 #------------------------\u57FA\u672C\u914D\u7F6E
 # \u5E94\u7528\u540D\u79F0
-# \u5F00\u53D1\u73AF\u5883\u8BBE\u7F6E
-spring.profiles.active=dev
-# \u5185\u5B58\u6A21\u5F0F
-spring.shardingsphere.mode.type=Memory
+
 # \u6253\u5370SQl
 spring.shardingsphere.props.sql-show=true
 #------------------------\u6570\u636E\u6E90\u914D\u7F6E
@@ -37,7 +34,7 @@ spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=server-ord
 # \u5206\u7247\u5217\u540D\u79F0
 spring.shardingsphere.rules.sharding.tables.t_order.database-strategy.standard.sharding-column=user_id
 # \u5206\u7247\u7B97\u6CD5\u540D\u79F0
-spring.shardingsphere.rules.sharding.tables.<table-name>.database-strategy.standard.sharding-algorithm-name=alg_inline_userid
+spring.shardingsphere.rules.sharding.tables.t_order.database-strategy.standard.sharding-algorithm-name=alg_inline_userid
 # \u5206\u7247\u7B97\u6CD5\u7C7B\u578B
 spring.shardingsphere.rules.sharding.sharding-algorithms.alg_inline_userid.type=INLINE
 # \u5206\u7247\u7B97\u6CD5\u5C5E\u6027\u914D\u7F6E
