--- a/sharding5_jdbc01/src/main/resources/application.properties
+++ b/sharding5_jdbc01/src/main/resources/application.properties
@@ -35,9 +35,13 @@ spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=server-ord
 spring.shardingsphere.rules.sharding.tables.t_order.database-strategy.standard.sharding-column=user_id
 # \u5206\u7247\u7B97\u6CD5\u540D\u79F0
 spring.shardingsphere.rules.sharding.tables.t_order.database-strategy.standard.sharding-algorithm-name=alg_inline_userid
+## \u5206\u7247\u7B97\u6CD5\u7C7B\u578B
+#spring.shardingsphere.rules.sharding.sharding-algorithms.alg_inline_userid.type=INLINE
+## \u5206\u7247\u7B97\u6CD5\u5C5E\u6027\u914D\u7F6E
+#spring.shardingsphere.rules.sharding.sharding-algorithms.alg_inline_userid.props.algorithm-expression=server-order$->{user_id%2}
 # \u5206\u7247\u7B97\u6CD5\u7C7B\u578B
-spring.shardingsphere.rules.sharding.sharding-algorithms.alg_inline_userid.type=INLINE
+spring.shardingsphere.rules.sharding.sharding-algorithms.alg_inline_userid.type=MOD
 # \u5206\u7247\u7B97\u6CD5\u5C5E\u6027\u914D\u7F6E
-spring.shardingsphere.rules.sharding.sharding-algorithms.alg_inline_userid.props.algorithm-expression=server-order$->{user_id%2}
+spring.shardingsphere.rules.sharding.sharding-algorithms.alg_inline_userid.props.sharding-count=2
 
 
