--- a/sharding5_jdbc01/src/main/resources/application.properties
+++ b/sharding5_jdbc01/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.shardingsphere.datasource.server-order1.password=123456
 # \u7F3A\u7701\u8868\u793A\u4F7F\u7528\u5DF2\u77E5\u6570\u636E\u6E90\u4E0E\u903B\u8F91\u8868\u540D\u79F0\u751F\u6210\u6570\u636E\u8282\u70B9\uFF0C\u7528\u4E8E\u5E7F\u64AD\u8868\uFF08\u5373\u6BCF\u4E2A\u5E93\u4E2D\u90FD\u9700\u8981\u4E00\u4E2A\u540C\u6837\u7684\u8868\u7528\u4E8E\u5173\u8054\u67E5\u8BE2\uFF0C\u591A\u4E3A\u5B57\u5178\u8868\uFF09\u6216\u53EA\u5206\u5E93\u4E0D\u5206\u8868\u4E14\u6240\u6709\u5E93\u7684\u8868\u7ED3\u6784\u5B8C\u5168\u4E00\u81F4\u7684\u60C5\u51B5
 spring.shardingsphere.rules.sharding.tables.t_user.actual-data-nodes=server-user.t_user
 # server-order0.t_order0,server-order0.t_order1,server-order1.t_order0,server-order1.t_order1
-spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=server-order$->{0..1}.t_order0
+spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=server-order$->{0..1}.t_order$->{0..1}
 # \u7528\u4E8E\u5355\u5206\u7247\u952E\u7684\u6807\u51C6\u5206\u7247\u573A\u666F
 # \u5206\u7247\u5217\u540D\u79F0
 spring.shardingsphere.rules.sharding.tables.t_order.database-strategy.standard.sharding-column=user_id
@@ -39,9 +39,21 @@ spring.shardingsphere.rules.sharding.tables.t_order.database-strategy.standard.s
 #spring.shardingsphere.rules.sharding.sharding-algorithms.alg_inline_userid.type=INLINE
 ## \u5206\u7247\u7B97\u6CD5\u5C5E\u6027\u914D\u7F6E
 #spring.shardingsphere.rules.sharding.sharding-algorithms.alg_inline_userid.props.algorithm-expression=server-order$->{user_id%2}
+
 # \u5206\u7247\u7B97\u6CD5\u7C7B\u578B
 spring.shardingsphere.rules.sharding.sharding-algorithms.alg_inline_userid.type=MOD
 # \u5206\u7247\u7B97\u6CD5\u5C5E\u6027\u914D\u7F6E
 spring.shardingsphere.rules.sharding.sharding-algorithms.alg_inline_userid.props.sharding-count=2
 
+# \u5206\u8868\u7B56\u7565
+# \u7528\u4E8E\u5355\u5206\u7247\u952E\u7684\u6807\u51C6\u5206\u7247\u573A\u666F
+# \u5206\u7247\u5217\u540D\u79F0
+spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-column=order_no
+# \u5206\u7247\u7B97\u6CD5\u540D\u79F0
+spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-algorithm-name=alg_hash_orderNo
 
+
+# \u5206\u7247\u7B97\u6CD5\u7C7B\u578B
+spring.shardingsphere.rules.sharding.sharding-algorithms.alg_hash_orderNo.type=HASH_MOD
+# \u5206\u7247\u7B97\u6CD5\u5C5E\u6027\u914D\u7F6E
+spring.shardingsphere.rules.sharding.sharding-algorithms.alg_hash_orderNo.props.sharding-count=2
