--- a/sharding5_jdbc01/src/main/resources/application.properties
+++ b/sharding5_jdbc01/src/main/resources/application.properties
@@ -57,3 +57,18 @@ spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.shar
 spring.shardingsphere.rules.sharding.sharding-algorithms.alg_hash_orderNo.type=HASH_MOD
 # \u5206\u7247\u7B97\u6CD5\u5C5E\u6027\u914D\u7F6E
 spring.shardingsphere.rules.sharding.sharding-algorithms.alg_hash_orderNo.props.sharding-count=2
+
+
+# \u5206\u5E03\u5F0F\u5E8F\u5217\u7B56\u7565\u914D\u7F6E
+# \u5206\u5E03\u5F0F\u5E8F\u5217\u5217\u540D\u79F0
+spring.shardingsphere.rules.sharding.tables.t_order.key-generate-strategy.column=id
+# \u5206\u5E03\u5F0F\u5E8F\u5217\u7B97\u6CD5\u540D\u79F0
+spring.shardingsphere.rules.sharding.tables.t_order.key-generate-strategy.key-generator-name=
+
+
+# \u5206\u5E03\u5F0F\u5E8F\u5217\u7B97\u6CD5\u914D\u7F6E
+# \u5206\u5E03\u5F0F\u5E8F\u5217\u7B97\u6CD5\u7C7B\u578B
+spring.shardingsphere.rules.sharding.key-generators.<key-generate-algorithm-name>.type=SNOWFLAKE
+# \u5206\u5E03\u5F0F\u5E8F\u5217\u7B97\u6CD5\u5C5E\u6027\u914D\u7F6E
+spring.shardingsphere.rules.sharding.key-generators.<key-generate-algorithm-name>.props.worker-id=0
+
