--- a/sharding5_jdbc01/src/main/resources/application.properties
+++ b/sharding5_jdbc01/src/main/resources/application.properties
@@ -63,12 +63,12 @@ spring.shardingsphere.rules.sharding.sharding-algorithms.alg_hash_orderNo.props.
 # \u5206\u5E03\u5F0F\u5E8F\u5217\u5217\u540D\u79F0
 spring.shardingsphere.rules.sharding.tables.t_order.key-generate-strategy.column=id
 # \u5206\u5E03\u5F0F\u5E8F\u5217\u7B97\u6CD5\u540D\u79F0
-spring.shardingsphere.rules.sharding.tables.t_order.key-generate-strategy.key-generator-name=
+spring.shardingsphere.rules.sharding.tables.t_order.key-generate-strategy.key-generator-name=alg_snowflake
 
 
 # \u5206\u5E03\u5F0F\u5E8F\u5217\u7B97\u6CD5\u914D\u7F6E
 # \u5206\u5E03\u5F0F\u5E8F\u5217\u7B97\u6CD5\u7C7B\u578B
-spring.shardingsphere.rules.sharding.key-generators.<key-generate-algorithm-name>.type=SNOWFLAKE
+spring.shardingsphere.rules.sharding.key-generators.alg_snowflake.type=SNOWFLAKE
 # \u5206\u5E03\u5F0F\u5E8F\u5217\u7B97\u6CD5\u5C5E\u6027\u914D\u7F6E
-spring.shardingsphere.rules.sharding.key-generators.<key-generate-algorithm-name>.props.worker-id=0
+spring.shardingsphere.rules.sharding.key-generators.alg_snowflake.props.worker-id=0
 
