--- a/sharding5_jdbc01/src/main/resources/application.properties
+++ b/sharding5_jdbc01/src/main/resources/application.properties
@@ -91,3 +91,6 @@ spring.shardingsphere.rules.sharding.tables.t_order_item.key-generate-strategy.k
 spring.shardingsphere.rules.sharding.key-generators.alg_snowflake.type=SNOWFLAKE
 # \u5206\u5E03\u5F0F\u5E8F\u5217\u7B97\u6CD5\u5C5E\u6027\u914D\u7F6E
 spring.shardingsphere.rules.sharding.key-generators.alg_snowflake.props.worker-id=0
+
+#------------------------\u7ED1\u5B9A\u8868
+#spring.shardingsphere.rules.sharding.binding-tables[0]=t_order,t_order_item
