--- a/sharding5_jdbc01/src/main/resources/application.properties
+++ b/sharding5_jdbc01/src/main/resources/application.properties
@@ -93,4 +93,4 @@ spring.shardingsphere.rules.sharding.key-generators.alg_snowflake.type=SNOWFLAKE
 spring.shardingsphere.rules.sharding.key-generators.alg_snowflake.props.worker-id=0
 
 #------------------------\u7ED1\u5B9A\u8868
-#spring.shardingsphere.rules.sharding.binding-tables[0]=t_order,t_order_item
+spring.shardingsphere.rules.sharding.binding-tables[0]=t_order,t_order_item
