--- a/sharding5_jdbc01/src/main/resources/application.properties
+++ b/sharding5_jdbc01/src/main/resources/application.properties
@@ -33,6 +33,8 @@ spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=server-ord
 
 spring.shardingsphere.rules.sharding.tables.t_order_item.actual-data-nodes=server-order$->{0..1}.t_order_item$->{0..1}
 
+#\u6570\u636E\u8282\u70B9\u53EF\u4E0D\u914D\u7F6E\uFF0C\u9ED8\u8BA4\u60C5\u51B5\u4E0B\uFF0C\u5411\u6240\u6709\u6570\u636E\u6E90\u5E7F\u64AD
+spring.shardingsphere.rules.sharding.tables.t_dict.actual-data-nodes=server-user.t_dict,server-order$->{0..1}.t_dict
 
 
 # \u7528\u4E8E\u5355\u5206\u7247\u952E\u7684\u6807\u51C6\u5206\u7247\u573A\u666F
@@ -94,3 +96,7 @@ spring.shardingsphere.rules.sharding.key-generators.alg_snowflake.props.worker-i
 
 #------------------------\u7ED1\u5B9A\u8868
 spring.shardingsphere.rules.sharding.binding-tables[0]=t_order,t_order_item
+
+
+# \u5E7F\u64AD\u8868
+spring.shardingsphere.rules.sharding.broadcast-tables[0]=t_dict
